# libumqtt

./: .gitmodules  CMakeLists.txt  build.sh
example/: CMakeLists.txt  umqtt_pub.c  umqtt_sub.c
src/: CMakeLists.txt  config.h.in
